# xiaoai-bridge

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/xiaoai_bridge/: __init__.py  app.py  audio_server.py  check_login.py  config.py  handler.py  handler_loader.py  init_project.py  list_devices.py  mina_client.py  poller.py  test_speak.py  whichxiaoai.py  xiaomi_auth.py
tests/: test_app_handler.py  test_handler_loader.py  test_init_project.py
